--- a/public/style.css
+++ b/public/style.css
@@ -10,13 +10,13 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #F8F8F8;
+    background: #3a3a3a;
     font-family: 'Roboto', sans-serif;
 }
 section.chat__section {
     width: 800px;
     max-width: 90%;
-    background: rgb(238, 236, 236);
+    background: rgb(241, 223, 223);
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 .brand {
@@ -28,7 +28,7 @@ section.chat__section {
 .brand h1 {
     text-transform: uppercase;
     font-size: 20px;
-    color: #444;
+    color: rgb(31, 31, 31);
     margin-left: 10px;
 }
 .message__area{
@@ -45,7 +45,7 @@ textarea {
     padding: 20px;
     font-size: 16px;
     outline: none;
-    background: #aec8f0;
+    background: #fcf6f6;
 }
 
 .message {
@@ -56,11 +56,11 @@ textarea {
     position: relative;
 }
 .incoming {
-    background: #f0f0e9;
+    background: #ffffff;
     color: rgb(0, 0, 0);  
 }
 .outgoing {
-    background: #14af81;
+    background: #b4fcc5;
     color: #000000;
     margin-left: auto;
 }
